Fix wrong vh on mobile

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -29,7 +29,7 @@ body {
 }
 
 #root {
-  height: 100vh;
+  height: 100dvh;
   display: flex;
 }
 
